--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <link rel="icon" type="image/svg+xml" href="/snowstats/mountains.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
+      name="description"
+      content="Transformed a non-interactive PDF map of Stevens Pass Ski Resort into an interactive CRUD app built with React frontend and Django backend with PostgreSQL database."
+    />
+    <meta
       http-equiv="Content-Security-Policy"
       content="upgrade-insecure-requests"
     />
