--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="Cache-Control" content="private; max-age=3600" />
+    <meta http-equiv="Cache-Control" content="max-age=3600" />
     <link rel="icon" type="image/svg+xml" href="/snowstats/mountains.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
